--- a/index.html
+++ b/index.html
@@ -3,72 +3,70 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Blog de Jogos Educativos</title>
-  <!-- Bootstrap CSS via CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Arquivo de estilo personalizado -->
+  <title>Blog de Jogos Educativos | Recursos para Professores</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description"
+    content="Blog com jogos educativos digitais gratuitos organizados por ano escolar do Ensino Fundamental. Recursos lúdicos para professores e alunos.">
+  <link rel="icon" href="assets/favicon.png" type="image/png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="assets/favicon.png" type="icon">
-
 </head>
 
 <body>
-  <!-- Navbar -->
-  <!DOCTYPE html>
-  <html lang="pt-br">
-
-  <head>
-    <meta charset="UTF-8">
-    <title>Blog de Jogos Educativos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/image.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-  </head>
-
-  <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #0800ff;">
-      <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">Jogos Educativos</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks">
-          <span><i class="bi bi-list text-white" style="font-size: 1.5rem;"></i></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navLinks">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link text-white" href="#ano1">1º Ano EF</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#ano2">2º Ano EF</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#ano3">3º Ano EF</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#ano4">4º Ano EF</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="sobre.html">Sobre</a></li>
-            <img src="assets/icone escola.jpg" alt="">
-          </ul>
-        </div>
-      </div>
+  <header>
+    <nav class="nav-principal">
+      <a class="logo" href="index.html" aria-label="Página inicial do Blog de Jogos Educativos">
+        <img src="assets/icone escola.jpg" alt="Ícone Escola">
+        Jogos Educativos
+      </a>
+      <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false" aria-controls="menu-links">
+        &#9776;
+      </button>
+      <ul class="menu-links" id="menu-links">
+        <li><a href="index.html#ano1">1º Ano EF</a></li>
+        <li><a href="index.html#ano2">2º Ano EF</a></li>
+        <li><a href="index.html#ano3">3º Ano EF</a></li>
+        <li><a href="index.html#ano4">4º Ano EF</a></li>
+        <li><a href="sobre.html" aria-current="page">Sobre</a></li>
+      </ul>
     </nav>
+  </header>
 
-    <div class="container py-4">
-      <section id="ano1">
-        <h2>1º Ano do Ensino Fundamental</h2>
-        <div class="row" id="cards-1"></div>
-      </section>
-      <section id="ano2">
-        <h2>2º Ano do Ensino Fundamental</h2>
-        <div class="row" id="cards-2"></div>
-      </section>
-      <section id="ano3">
-        <h2>3º Ano do Ensino Fundamental</h2>
-        <div class="row" id="cards-3"></div>
-      </section>
-      <section id="ano4">
-        <h2>4º Ano do Ensino Fundamental</h2>
-        <div class="row" id="cards-4"></div>
-      </section>
-    </div>
+  <main class="container">
+    <section id="ano1" aria-labelledby="titulo-ano1">
+      <h2 id="titulo-ano1">1º Ano do Ensino Fundamental</h2>
+      <div class="cards-container" id="cards-1" aria-live="polite"></div>
+    </section>
+    <section id="ano2" aria-labelledby="titulo-ano2">
+      <h2 id="titulo-ano2">2º Ano do Ensino Fundamental</h2>
+      <div class="cards-container" id="cards-2" aria-live="polite"></div>
+    </section>
+    <section id="ano3" aria-labelledby="titulo-ano3">
+      <h2 id="titulo-ano3">3º Ano do Ensino Fundamental</h2>
+      <div class="cards-container" id="cards-3" aria-live="polite"></div>
+    </section>
+    <section id="ano4" aria-labelledby="titulo-ano4">
+      <h2 id="titulo-ano4">4º Ano do Ensino Fundamental</h2>
+      <div class="cards-container" id="cards-4" aria-live="polite"></div>
+    </section>
+  </main>
 
-    <footer class="text-center py-3" style="background-color: #0800ff; color: #fff; border-radius: 5px;">
-      Criado pelo instrutor de informática Kailan de Scena Pacheco ©
-    </footer>
+  <footer class="text-center py-3" style="background-color: #0800ff; color: #fff; border-radius: 5px;">
+    <small>Criado pelo instrutor de informática Kailan de Scena Pacheco ©</small>
+  </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="posts.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="posts.js"></script>
+  <script>
+    // Menu responsivo puro JS
+    const btn = document.querySelector('.menu-toggle');
+    const menu = document.getElementById('menu-links');
+    btn.addEventListener('click', function () {
+      const aberto = menu.classList.toggle('open');
+      btn.setAttribute('aria-expanded', aberto ? 'true' : 'false');
+    });
+  </script>
+</body>
+
+</html>
