--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&family=Nunito:wght@400;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -24,16 +27,22 @@
         &#9776;
       </button>
       <ul class="menu-links" id="menu-links">
-        <li><a href="index.html#ano1">1º Ano EF</a></li>
-        <li><a href="index.html#ano2">2º Ano EF</a></li>
-        <li><a href="index.html#ano3">3º Ano EF</a></li>
-        <li><a href="index.html#ano4">4º Ano EF</a></li>
-        <li><a href="sobre.html" aria-current="page">Sobre</a></li>
+        <li><a href="#ano1">1º Ano EF</a></li>
+        <li><a href="#ano2">2º Ano EF</a></li>
+        <li><a href="#ano3">3º Ano EF</a></li>
+        <li><a href="#ano4">4º Ano EF</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
       </ul>
+      <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2aOne38wvhVlyYiHGG-YdqIWGDPSmTaOHQb0wzkl1HdwPN9J3wNKEeqUDK58zSe6jlRKtLbpty?gv=true"
+        class="btn-agendar" target="_blank" rel="noopener noreferrer" aria-label="Agendar horário no Google Calendar">
+        Agendar horário
+      </a>
     </nav>
   </header>
 
   <main class="container">
+
+    <!-- Suas seções dos anos continuam abaixo -->
     <section id="ano1" aria-labelledby="titulo-ano1">
       <h2 id="titulo-ano1">1º Ano do Ensino Fundamental</h2>
       <div class="cards-container" id="cards-1" aria-live="polite"></div>
@@ -59,7 +68,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="posts.js"></script>
   <script>
-    // Menu responsivo puro JS
     const btn = document.querySelector('.menu-toggle');
     const menu = document.getElementById('menu-links');
     btn.addEventListener('click', function () {
