--- a/sobre.html
+++ b/sobre.html
@@ -11,33 +11,37 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&family=Nunito:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg" style="background-color: #0800ff;">
-            <div class="container-fluid">
-                <a class="navbar-brand text-white fw-bold" href="index.html"
-                    aria-label="Página inicial do Blog de Jogos Educativos">
-                    <img src="assets/icone escola.jpg" alt="Ícone Escola"
-                        style="height:40px; border-radius:40%; margin-right:8px;">
-                    Jogos Educativos
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks"
-                    aria-controls="navLinks" aria-expanded="false" aria-label="Alternar navegação">
-                    <span><i class="bi bi-list text-white" style="font-size: 1.5rem;"></i></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navLinks">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link text-white" href="index.html#ano1">1º Ano EF</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="index.html#ano2">2º Ano EF</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="index.html#ano3">3º Ano EF</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="index.html#ano4">4º Ano EF</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="sobre.html"
-                                aria-current="page">Sobre</a></li>
-                    </ul>
-                </div>
-            </div>
+        <nav class="nav-principal" style="background-color: #0800ff;">
+            <a class="logo" href="index.html" aria-label="Página inicial do Blog de Jogos Educativos">
+                <img src="assets/icone escola.jpg" alt="Ícone Escola"
+                    style="height:40px; border-radius:40%; margin-right:8px;">
+                Jogos Educativos
+            </a>
+            <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false" aria-controls="menu-links">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+            <ul class="menu-links" id="menu-links">
+                <li><a class="nav-link text-white" href="index.html#ano1">1º Ano EF</a></li>
+                <li><a class="nav-link text-white" href="index.html#ano2">2º Ano EF</a></li>
+                <li><a class="nav-link text-white" href="index.html#ano3">3º Ano EF</a></li>
+                <li><a class="nav-link text-white" href="index.html#ano4">4º Ano EF</a></li>
+                <li><a class="nav-link text-white" href="sobre.html" aria-current="page">Sobre</a></li>
+                <li>
+                    <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2aOne38wvhVlyYiHGG-YdqIWGDPSmTaOHQb0wzkl1HdwPN9J3wNKEeqUDK58zSe6jlRKtLbpty?gv=true"
+                        class="btn-agendar" target="_blank" rel="noopener noreferrer"
+                        aria-label="Agendar horário no Google Calendar">
+                        Agendar horário
+                    </a>
+                </li>
+            </ul>
         </nav>
     </header>
 
@@ -78,6 +82,19 @@
         <small>Criado pelo instrutor de informática Kailan de Scena Pacheco ©</small>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const btn = document.querySelector('.menu-toggle');
+            const menu = document.getElementById('menu-links');
+            if (btn && menu) {
+                btn.addEventListener('click', function () {
+                    const aberto = menu.classList.toggle('open');
+                    btn.setAttribute('aria-expanded', aberto ? 'true' : 'false');
+                    btn.classList.toggle('open', aberto);
+                });
+            }
+        });
+    </script>
 </body>
 
 </html>
